1.引入jar依赖 2.创建order-context 3.修改引入接口基础响应对象

--- a/cqrs-bookstore/shopping-context/src/main/resources/static/index.html
+++ b/cqrs-bookstore/shopping-context/src/main/resources/static/index.html
@@ -172,7 +172,8 @@ function initCart(onDone) {
   var newCartId = guid();
   postJSON("carts", JSON.stringify({"cartId": newCartId }))
       .error(function (data) {
-        alert("Error: " + data);
+        console.log(data);
+        alert("initCart error");
       })
       .done(function () {
         console.log("Successfully initialized new session: " + newCartId);
