--- a/cqrs-bookstore/shopping-context/src/main/resources/static/index.html
+++ b/cqrs-bookstore/shopping-context/src/main/resources/static/index.html
@@ -114,7 +114,7 @@
 
 var shoppingService = "carts/";
 var productCatalogService = "http://localhost:9998/products";
-var orderService = "http://localhost:8070/service/order-requests";
+var orderService = "http://localhost:9997/order-requests";
 
 $(document).ready(function () {
   loadAndRenderProducts();
