--- a/cqrs-bookstore/shopping-context/src/main/resources/static/index.html
+++ b/cqrs-bookstore/shopping-context/src/main/resources/static/index.html
@@ -112,7 +112,7 @@
 <!-- Load all books -->
 <script language="javascript">
 
-var shoppingService = "carts/";
+var shoppingService = "http://localhost:9999/carts/";
 var productCatalogService = "http://localhost:9998/products";
 var orderService = "http://localhost:9997/order-requests";
 
